--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
 
     <footer>
         <div class="footer-nav">
-            <p class="rights">Все права защищены &copy; 2025</p>
+            <p class="rights">Все права защищены &copy; 2025 <br><span>Авторы проекта: Тимофей Куренков, Александр Северов, 
+                Дмитрий Митенин, Андрей Табунов, Валерия Зорина, Тимофей Трусов, Семён Хусточка, Никита Савков, 
+                Алина Малышева, Дмитрий Слепов, Максим Морозов, Вячеслав Рычков, Иван Майорченко, Екатерина Мымрина, 
+                Доминика Дектерева, Константин Калинин, Виктория Литвинова, Никита Поташов, Захар Смирнов</span></p>
             <p class="support">Проект реализован АНО "КодингЦентр" при поддержке благотворительного фонда «Доброта Севера», Агентства Социальной Информации, при поддержке ПАО «Северсталь», в партнёрстве с организацией «Союз российских городов».</p>
         </div>
     </footer>
