--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <footer>
         <div class="footer-nav">
-            <p class="rights">Все права защищены &copy; 2025 <br><span>Авторы проекта: Тимофей Куренков, Александр Северов, 
+            <p class="rights">Все права защищены &copy; 2025 <br><span>Авторы проекта: Павел Александрович Табунов, Тимофей Куренков, Александр Северов, 
                 Дмитрий Митенин, Андрей Табунов, Валерия Зорина, Тимофей Трусов, Семён Хусточка, Никита Савков, 
                 Алина Малышева, Дмитрий Слепов, Максим Морозов, Вячеслав Рычков, Иван Майорченко, Екатерина Мымрина, 
                 Доминика Дектерева, Константин Калинин, Виктория Литвинова, Никита Поташов, Захар Смирнов</span></p>
@@ -100,4 +100,5 @@
 
 
 </body>
+
 </html>
