--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <img src="images/logoB.png" alt="Логотип">
-            <span class="nav-title">ИГРА-ТРЕНАЖЁР<br> "БЕЗОПАСНОСТЬ НА СЕВЕРСТАЛИ"</span>
+            <span class="nav-title">Игра-тренажер<br> "Безопасность на Северстали"</span>
         </nav>
     </header>
     <div class="text">
@@ -102,3 +102,4 @@
 </body>
 
 </html>
+
